fix: update login system fix: update design

--- a/admin/request_music/index.html
+++ b/admin/request_music/index.html
@@ -209,7 +209,7 @@
             });
         });
 
-        searchBox.addEventListener("keypress", (e) => {
+        searchBox.addEventListener("keydown", (e) => {
             if (e.key === "Enter") {
                 searchBtn.click();
             }
