--- a/caution/index.html
+++ b/caution/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 
 <head>
-	<!--文字コード・互換モード-->
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
-	<title>警告 | 水戸一高附属中総合ウェブサイト</title>
-	<!--ビューポート-->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--css-->
+    <!--文字コード・互換モード-->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
+    <title>警告 | 水戸一高附属中総合ウェブサイト</title>
+    <!--ビューポート-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--css-->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
     <link rel="stylesheet" href="../script/notice/notice.css">
@@ -34,7 +34,7 @@
     <link rel="icon" type="image/png" href="../img/mitoichi-fuzoku-192x192.png" sizes="192x192">
     <!--CDN-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.35.4"></script>
-    
+
     <!--マニフェスト-->
     <link rel="manifest" href="../manifest.json">
 </head>
@@ -46,18 +46,37 @@
     <main>
         <section>
             <h2>警告(大事なことなので2回言いました)</h2>
-            <p>このサイトは水戸一高附属中生専用サイトです。</p>
             <p>外部の方は利用できません。</p>
-            <p>もし附属中生なのにこの画面が表示された場合は、<a href="https://mail.google.com/mail/?view=cm&to=yamamoto.yuujirou@mito1-h.ibk.ed.jp&su=サイトに入れない" target="_blank" rel="noopener noreferrer">yamamoto.yuujirou@mito1-h.ibk.ed.jp</a>まで名前と一緒に連絡ください。</p>
+            <p>もし手違いでこの画面が表示された場合、<a href="#" id="logout-link">戻る</a>か<a
+                    href="https://mail.google.com/mail/?view=cm&to=yamamoto.yuujirou@mito1-h.ibk.ed.jp&su=サイトに入れない"
+                    target="_blank" rel="noopener noreferrer">yamamoto.yuujirou@mito1-h.ibk.ed.jp</a>まで名前と一緒に連絡ください。</p>
         </section>
     </main>
     <script src="../script/customAlert.js" type="module"></script>
     <script type="module" src="../script/restriction.js"></script>
     <script type="module" src="../script/notification.js"></script>
     <script src="../script/verification.js" type="module"></script>
+    <script type="module">
+        import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
+        const supabase = createClient(
+            "https://xbhzytcfbfzjvczfthwb.supabase.co",
+            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxiaHp5dGNmYmZ6anZjemZ0aHdiIiwicm9sZSI6ImFub24iLCJpYXQiOjE2OTUwMTc3NDYsImV4cCI6MTk2MDU0Mzc0Nn0.DQYk1kXgG7v8YH4H1N5b8KJxO6YQ1Y5KfV1jz3K1h1o"
+        );
+        document.getElementById("logout-link").addEventListener("click", async (e) => {
+            e.preventDefault();
+            const { error } = await supabase.auth.signOut();
 
-    <script data-goatcounter="https://talus.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+            if (error) {
+                alert("ログアウト中にエラーが発生しました: " + error.message);
+                return;
+            }
+            
+            localStorage.removeItem("sb-mgsbwkidyxmicbacqeeh-auth-token");
+
+            window.location.href = "../";
+        });
+    </script>
+    <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 
 </html>
