--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
             overflow: hidden;
             position: relative;
             border-radius: 8px;
+            margin: 1rem auto;
         }
 
         #timetable-wrapper img {
-            width: calc(200% + 20px);
+            width: 200%;
             object-fit: cover;
             object-position: left top;
             display: block;
             cursor: pointer;
+            margin: 0;
         }
 
         #timetable-loading {
