--- a/tasks/index.html
+++ b/tasks/index.html
@@ -5,7 +5,7 @@
     <!--文字コード・互換モード-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
-    <title>課題(A) | 水戸一高附属中総合ウェブサイト</title>
+    <title>課題 | 水戸一高附属中総合ウェブサイト</title>
     <!--ビューポート-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--css-->
