--- a/timetable/index.html
+++ b/timetable/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
     <link rel="stylesheet" href="../script/notice/notice.css">
     <style>
-        #timetable {
+        #timetable-img {
             border-radius: 8px;
             width: calc(100% - 2rem);
             display: block;
@@ -76,7 +76,7 @@
     <main>
         <section>
             <h2>現在の時間割画像</h2>
-            <img src="" alt="時間割画像" id="timetable" width="calc(100% - 2rem)">
+            <img src="" alt="時間割画像" id="timetable-img" width="calc(100% - 2rem)">
         </section>
         <section class="main__classlist">
             <h2>時間割スプレッドシート</h2>
@@ -124,7 +124,7 @@
         const BASE_URL = "https://talus-daise.github.io/mito1-website-timetable/output/";
         const JSON_URL = BASE_URL + "images.json";
 
-        const timetableImg = document.getElementById("timetable");
+        const timetableImg = document.getElementById("timetable-img");
         timetableImg.style.display = "none";
         timetableImg.insertAdjacentHTML("afterend", "<span id='loading'>読み込み中…</span>");
 
@@ -188,7 +188,7 @@
                 document.getElementById("loading")?.remove();
 
                 for (const f of todayFiles) {
-                    const img = document.getElementById("timetable");
+                    const img = document.getElementById("timetable-img");
                     img.src = f.url;
                     img.alt = f.filename;
                     img.style.cssText = "max-width:100%; border-radius:8px";
