--- a/admin/user_manage/index.html
+++ b/admin/user_manage/index.html
@@ -13,17 +13,66 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
     <link rel="stylesheet" href="../../script/notice/notice.css">
     <style>
-        .user-list {
-            display: grid;
-            ;
-            grid-template-columns: 100%;
-            gap: 10px;
+        .content-list-item {
+            position: relative;
         }
 
-        .user-item {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+        .user-actions-menu-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: none;
+            border: none;
+            font-size: 1.5rem;
+            cursor: pointer;
+            color: #888;
+            z-index: 2;
+            box-shadow: none;
+        }
+
+        .user-actions-menu-btn:hover {
+            color: #333;
+            box-shadow: none;
+        }
+
+        .user-actions-menu-btn:active {
+            background-color: transparent;
+            color: #FE483B;
+        }
+
+        .user-actions-menu {
+            display: none;
+            position: absolute;
+            top: 40px;
+            right: 10px;
+            border-radius: 6px;
+            min-width: 120px;
+            z-index: 10;
+        }
+
+        .user-actions-menu.active {
+            display: block;
+        }
+
+        .user-actions-menu button {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            padding: 8px 12px;
+            background: none;
+            border: none;
+            color: #333;
+            font-size: 1rem;
+            cursor: pointer;
+            gap: 8px;
+            margin: 0;
+            border-radius: 0;
+            background-color: #eee;
+            box-shadow: none;
+        }
+
+        .user-actions-menu button:hover {
+            background: #999;
         }
     </style>
     <!--web情報-->
@@ -91,38 +140,108 @@
                 return;
             }
 
-            data.forEach(user => {
+            data.filter(user => user.full_name).forEach(user => {
                 const userItem = document.createElement("div");
                 userItem.className = "content-list-item";
                 userItem.innerHTML = `
+                    <button class="user-actions-menu-btn" title="操作メニュー" tabindex="0">︙</button>
+                    <div class="user-actions-menu">
+                        <button class="user-actions-menu-close-btn" title="名前変更" tabindex="0">
+                            <i class="fa-solid fa-pencil"></i> 名前変更
+                        </button>
+                        <button class="stop-user-btn" data-user-id="${user.user_id}" title="ユーザー停止">
+                            <i class="fa-solid fa-ban"></i> 停止
+                        </button>
+                        <button class="delete-user-btn" data-user-id="${user.user_id}" title="ユーザー削除">
+                            <i class="fa-solid fa-trash"></i> 削除
+                        </button>
+                        <button class="redirect-user-page-btn" data-user-id="${user.user_id}" title="ユーザー詳細">
+                            <i class="fa-solid fa-arrow-up-right-from-square"></i> 詳細
+                        </button>
+                    </div>
                     <p><i class="fa-solid fa-id-card"></i> ${user.user_id}</p>
                     <p><i class="fa-solid fa-school"></i> ${user.full_name}</p>
                     <p><i class="fa-solid fa-envelope"></i> ${user.user_email}</p>
                     <p><i class="fa-solid fa-user"></i> ${user.display_name}</p>
-                    <p><i class="fa-solid fa-user-tag"></i> ${user.role}</p>
-                    <p>
-                        <button data-user-id="${user.user_id}" class="stop-user-btn" style="width: fit-content;">ユーザー停止</button>
-                        <button data-user-id="${user.user_id}" class="delete-user-btn" style="width: fit-content;">ユーザー削除</button>
-                        <button data-user-id="${user.user_id}" class="redirect-user-page-btn" style="width: fit-content;">ユーザー詳細</button>
-                    </p>
+                    <p><i class="fa-solid fa-user-tag"></i> ${user.role === null ? "visitor" : user.role}</p>
                 `;
+
+                // メニュー開閉制御
+                const menuBtn = userItem.querySelector(".user-actions-menu-btn");
+                const menu = userItem.querySelector(".user-actions-menu");
+                menuBtn.addEventListener("click", (e) => {
+                    e.stopPropagation();
+                    // すでにこのメニューが開いている場合は閉じる
+                    if (menu.classList.contains("active")) {
+                        menu.classList.remove("active");
+                        return;
+                    }
+                    // 他のメニューを閉じる
+                    document.querySelectorAll('.user-actions-menu.active').forEach(m => m.classList.remove('active'));
+                    menu.classList.add("active");
+                });
+                // 外側クリックで閉じる
+                document.addEventListener("click", () => {
+                    menu.classList.remove("active");
+                });
+                // メニュー内クリックは閉じない
+                menu.addEventListener("click", e => e.stopPropagation());
+
+                // ボタンイベント登録
+                const nameChangeBtn = userItem.querySelector(".user-actions-menu-close-btn");
+                nameChangeBtn.addEventListener("click", async () => {
+                    let newName = prompt("新しい名前を入力してください。", user.display_name);
+
+                    if (newName === null) {
+                        showCustomNotification("名前変更をキャンセルしました。");
+                        return; // キャンセルされた場合
+                    }
+                    
+                    if (newName.trim() === "") {
+                        newName = "とある水戸一の名無し"; // デフォルト名
+                    }
+                    
+                    const { error: updateError } = await supabase
+                        .from("users")
+                        .update({ display_name: newName.trim() })
+                        .eq("user_id", user.user_id);
+
+                    if (updateError) {
+                        console.error("Error updating name:", updateError);
+                        return;
+                    }
+                    showCustomNotification("名前を変更しました。");
+                    menu.classList.remove("active");
+                });
 
                 const stopBtn = userItem.querySelector(".stop-user-btn");
                 stopBtn.addEventListener("click", async () => {
+                    const is_stopped = user.is_stopped ? "停止解除" : "停止";
+                    const confirmation = confirm(`本当にこのユーザーを${is_stopped}しますか？`);
+                    if (!confirmation) {
+                        return;
+                    }
+
                     const userId = stopBtn.getAttribute("data-user-id");
                     const { error: stopError } = await supabase
                         .from("users")
-                        .update({ is_stopped: true })
+                        .update({ is_stopped: !user.is_stopped })
                         .eq("user_id", userId);
                     if (stopError) {
                         console.error("Error stopping user:", stopError);
                         return;
                     }
-                    showCustomNotification("ユーザーを停止しました。");
+                    showCustomNotification(`ユーザーを${is_stopped}しました。`);
+                    menu.classList.remove("active");
                 });
 
                 const deleteBtn = userItem.querySelector(".delete-user-btn");
                 deleteBtn.addEventListener("click", async () => {
+                    const confirmation = confirm("本当にこのユーザーを削除しますか？この操作は元に戻せません。");
+                    if (!confirmation) {
+                        showCustomNotification("ユーザー削除をキャンセルしました。");
+                        return;
+                    }
                     const userId = deleteBtn.getAttribute("data-user-id");
                     const { error: deleteError } = await supabase
                         .from("users")
@@ -135,6 +254,8 @@
                     }
 
                     userItem.remove();
+
+                    showCustomNotification("ユーザーを削除しました。");
                 });
 
                 const redirectBtn = userItem.querySelector(".redirect-user-page-btn");
@@ -155,3 +276,5 @@
 
     <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
+
+</html>
