--- a/admin/user_manage/index.html
+++ b/admin/user_manage/index.html
@@ -48,6 +48,7 @@
             border-radius: 6px;
             min-width: 120px;
             z-index: 10;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
         }
 
         .user-actions-menu.active {
