--- a/bbs/index.html
+++ b/bbs/index.html
@@ -92,7 +92,7 @@
 
             const { data: threads, error } = await supabase
                 .from("BBS")
-                .select("thread, created_at, username")
+                .select("thread, created_at, username, user_id")
                 .order("created_at", { ascending: true });
 
             if (error) { console.error(error); return; }
@@ -104,7 +104,8 @@
                     threadMap.set(t.thread, {
                         first_created_at: t.created_at,
                         latest_created_at: t.created_at,
-                        username: t.username
+                        username: t.username,
+                        userId: t.user_id
                     });
                 } else {
                     const info = threadMap.get(t.thread);
@@ -113,6 +114,7 @@
                     if (new Date(info.first_created_at) > new Date(t.created_at)) {
                         info.first_created_at = t.created_at;
                         info.username = t.username;
+                        info.userId = t.user_id;
                     }
 
                     // 最新書き込み
@@ -121,6 +123,8 @@
                     }
                 }
             });
+
+            console.log(threads)
 
             const elements = Array.from(threadMap.entries()).map(([thread, info]) => {
                 const span = document.createElement("span");
@@ -145,6 +149,8 @@
                 a.appendChild(latest);
 
                 const user = document.createElement("p");
+                user.classList.add("username")
+                user.setAttribute("data-user-id", info.userId)
                 user.innerHTML =
                     `<i class="fa-solid fa-user"></i> ${info.username}`;
                 a.appendChild(user);
@@ -154,6 +160,16 @@
             });
 
             threadList.append(...elements);
+
+            document.querySelectorAll(".username").forEach((element) => {
+                element.style.cursor = 'pointer';
+                element.addEventListener("click", (e) => {
+                    e.preventDefault()
+                    e.stopPropagation()
+                    const userId = element.getAttribute("data-user-id");
+                    window.location.href = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}&redirect_url=/mito1-website/bbs/`;
+                });
+            });
         });
 
         document.getElementById("search-btn").addEventListener("click", async () => {
