--- a/bbs/thread/index.html
+++ b/bbs/thread/index.html
@@ -206,7 +206,7 @@
                     element.style.cursor = 'pointer';
                     element.addEventListener("click", () => {
                         const userId = element.getAttribute("data-user-id");
-                        window.location.href = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}`;
+                        window.location.href = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}&redirect_url=/mito1-website/bbs/thread/?thread=${thread}`;
                     });
                 });
 
