--- a/question/details/index.html
+++ b/question/details/index.html
@@ -190,7 +190,7 @@
                 element.style.cursor = 'pointer';
                 element.addEventListener("click", () => {
                     const userId = element.getAttribute("data-user-id");
-                    window.location.href = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}`;
+                    window.location.href = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}&redirect_url=/mito1-website/question/details/?id=${encodeURIComponent(questionId)}`;
                 });
             });
         }
@@ -284,7 +284,7 @@
                 element.style.cursor = 'pointer';
                 element.addEventListener("click", () => {
                     const userId = element.getAttribute("data-user-id");
-                    window.location.href = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}`;
+                    window.location.href = `/mito1-website/mypage/other/?user_id=${encodeURIComponent(userId)}&redirect_url=/mito1-website/question/details/?id=${encodeURIComponent(questionId)}`;
                 });
             });
         });
